fixed issue with labels attached through for on ios fixes #361

--- a/Checkbox/themes/holodark/Checkbox.css
+++ b/Checkbox/themes/holodark/Checkbox.css
@@ -63,3 +63,6 @@ fieldset[disabled] .d-checkbox {
 fieldset[disabled] .d-checkbox > input[type=checkbox] {
   cursor: not-allowed;
 }
+label[for] {
+  cursor: pointer;
+}
